--- a/html/index.html
+++ b/html/index.html
@@ -128,5 +128,6 @@
             </table>
         </div>
     </div>
+    <span style="font-style: italic; font-size: 10pt;">Support for this research was provided by NIH R21AG0534676 and the Office of the VCGRE at UW- Madison with funding from the WARF.</span>
 </body>
 </html>
