--- a/html/index.html
+++ b/html/index.html
@@ -128,6 +128,7 @@
             </table>
         </div>
     </div>
+    <div style="clear: both; font-weight: bold;">For Questions/comments/technical support please contact zemla@wisc.edu</div>
     <span style="font-style: italic; font-size: 10pt;">Support for this research was provided by NIH R21AG0534676 and the Office of the VCGRE at UW- Madison with funding from the WARF.</span>
 </body>
 </html>
