--- a/html/index_standalone.html
+++ b/html/index_standalone.html
@@ -110,6 +110,12 @@
                             <option rv-each-network_method="network_parameters.network_methods">{ network_method }</option>
                         </select></td>
                 </tr>
+                <tr>
+                    <td>Prior</td>
+                    <td><select id="prior" rv-value="network_parameters.prior">
+                            <option rv-each-prior="network_parameters.priors">{ prior }</option>
+                        </select></td>
+                </tr>
             </table>
         </div>
         <div id="network_properties" class="box">
