dynamic hide/show parameters

--- a/html/index.html
+++ b/html/index.html
@@ -120,43 +120,43 @@
                             <option rv-each-network_method="network_parameters.network_methods">{ network_method }</option>
                         </select></td>
                 </tr>
-                <tr>
+                <tr rv-show="network_parameters.network_method | hasProp 'prior'">
                     <td>Prior</td>
                     <td><select id="prior" rv-value="network_parameters.prior">
                             <option rv-each-prior="network_parameters.priors">{ prior }</option>
                         </select></td>
                 </tr>  
-                <tr>
+                <tr rv-show="network_parameters.network_method | hasProp 'starting_graph'">
                     <td>Starting graph</td>
                     <td><select id="starting_graph" rv-value="network_parameters.starting_graph">
                             <option rv-each-starting_graph="network_parameters.starting_graphs">{ starting_graph }</option>
                         </select></td>
                 </tr>
-                <tr>
+                <tr rv-show="network_parameters.network_method | hasProp 'goni_windowsize'">
                     <td>Goni window size</td>
                     <td rv-value="network_parameters.goni_windowsize"><input type="number" min="1" id="goni_windowsize" rv-value="network_parameters.goni_windowsize"></td>
                 </tr>
-                <tr>
+                <tr rv-show="network_parameters.network_method | hasProp 'goni_threshold'">
                     <td>Goni threshold</td>
                     <td rv-value="network_parameters.goni_threshold"><input type="number" min="1" id="goni_threshold" rv-value="network_parameters.goni_threshold"></td>
                 </tr>
-                <tr>
+                <tr rv-show="network_parameters.network_method | hasProp 'first_item'">
                     <td>First list item</td>
                     <td><select id="first_items" rv-value="network_parameters.first_item">
                             <option rv-each-first_item="network_parameters.first_items">{ first_item }</option>
                         </select></td>
                 </tr>
-                <tr>
+                <tr rv-show="network_parameters.network_method | hasProp 'jump_type'">
                     <td>Jump type</td>
                     <td><select id="jump_types" rv-value="network_parameters.jump_type">
                             <option rv-each-jump_type="network_parameters.jump_types">{ jump_type }</option>
                         </select></td>
                 </tr>
-                <tr>
+                <tr rv-show="network_parameters.network_method | hasProp 'jump_probability'">
                     <td>Jump probability</td>
                     <td rv-value="network_parameters.jump_probability"><input type="number" min=0.0 max=1.0 step="0.01" id="jump_probability" rv-value="network_parameters.jump_probability"></td>
                 </tr>
-                <tr>
+                <tr rv-show="network_parameters.network_method | hasProp 'priming_probability'">
                     <td>Priming probability</td>
                     <td rv-value="network_parameters.priming_probability"><input type="number" min="0.0" max="1.0" step="0.01" id="priming_probability" rv-value="network_parameters.priming_probability"></td>
                 </tr>
