fixed bug with group networks in py2app version

--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>semnet</title>
+    <title>snafu - semantic network and fluency utility</title>
     <link rel="stylesheet" type="text/css" href="../lib/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="../css/main.css">
     <script type="text/javascript" src="../lib/jquery.js" defer></script>
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="../js/controllers.js" defer></script>
 </head>
 <body>
-    <div id="about"> v 0.5.0 </div>
+    <div id="about"> v 0.5.2 </div>
     <div id="input_row">
         <input type="text" id="fluency_files" value="results_cleaned.csv">
 		<input type="hidden" id="fluency_dir" value="../uploads">
