remove json export

--- a/html/index.html
+++ b/html/index.html
@@ -119,7 +119,7 @@
                 <tr>
                     <th>Data Properties</th>
                     <th>
-                        <input type="button" id="export_data" value="Export JSON" rv-enabled="data_properties.num_lists">
+                        <!-- <input type="button" id="export_data" value="Export JSON" rv-enabled="data_properties.num_lists"> -->
                         <input type="file" id="real_export_data" nwsaveas="data.json"> <!-- easy hack to style file select -->
                         <input type="button" id="export_data_csv" value="Export CSV" rv-enabled="data_properties.num_lists">
                         <input type="file" id="real_export_data_csv" nwsaveas="data.csv"> <!-- easy hack to style file select -->
