--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="../js/controllers.js" defer></script>
 </head>
 <body>
-    <div id="about"> v 2.2.1 </div>
+    <div id="about"> v 2.3.0 </div>
     <div id="input_row">
         <input type="text" id="fluency_files" value="results_cleaned.csv">
 		<input type="hidden" id="fluency_dir" value="../uploads">
@@ -119,30 +119,26 @@
                 <tr>
                     <th>Data Properties</th>
                     <th>
-                        <!-- <input type="button" id="export_data" value="Export JSON" rv-enabled="data_properties.num_lists"> -->
+                        <input type="button" id="export_data" value="Export JSON" rv-enabled="data_properties.num_lists">
                         <input type="file" id="real_export_data" nwsaveas="data.json"> <!-- easy hack to style file select -->
                         <input type="button" id="export_data_csv" value="Export CSV" rv-enabled="data_properties.num_lists">
                         <input type="file" id="real_export_data_csv" nwsaveas="data.csv"> <!-- easy hack to style file select -->
                     </th>   
                 </tr>
                 <tr>
-                    <td>Number of lists</td>
-                    <td>{ data_properties.num_lists }</td>
+                    <td>Avg number of lists</td>
+                    <td>{ data_properties.num_lists | trunc }</td>
                 </tr>
                 <tr>
                     <td>Avg number of items listed</td>
                     <td>{ data_properties.avg_items_listed | trunc }</td>
                 </tr>
                 <tr>
-                    <td>Avg number of unique items listed</td>
-                    <td>{ data_properties.avg_unique_items_listed | trunc }</td>
-                </tr>
-                <tr>
                     <td>Avg number of cluster switches</td>
                     <td>{ data_properties.avg_num_cluster_switches | trunc }</td>
                 </tr>
                 <tr>
-                    <td>Avg cluster length</td>
+                    <td>Avg cluster size</td>
                     <td>{ data_properties.avg_cluster_size | trunc }</td>
                 </tr>
                 <tr>
@@ -241,7 +237,7 @@
                 </tr>
                 <tr>
                     <th colspan="2">
-                        <input type="button" id="export_network_csv" value="Export CSV" rv-enabled="network_properties.graph">
+                        <input type="button" id="export_network_csv" value="Export Data" rv-enabled="network_properties.graph">
                         <input type="file" id="real_export_network_csv" nwsaveas="network.csv">
                         <input type="button" id="export_network_gml" value="Export GML" rv-enabled="network_properties.graph">
                         <input type="file" id="real_export_network_gml" nwsaveas="network.gml">
@@ -273,6 +269,6 @@
         </div>
     </div>
     <div style="clear: both; font-weight: bold;">For Questions/comments/technical support please contact zemla@wisc.edu</div>
-    <span style="font-style: italic; font-size: 10pt;">Support for this research was provided by NIH R21AG0534676 and the Office of the VCGRE at UW-Madison with funding from the WARF.</span>
+    <span style="font-style: italic; font-size: 10pt;">Support for this software was provided by NLM T15LM007359, NIH R21AG0534676, and the Office of the VCGRE at UW-Madison with funding from the WARF.</span>
 </body>
 </html>
