export data buttons and scheme cleanup

--- a/html/index.html
+++ b/html/index.html
@@ -119,9 +119,9 @@
                 <tr>
                     <th>Data Properties</th>
                     <th>
-                        <input type="button" id="export_data" value="Export JSON" rv-enabled="data_properties.num_lists">
+                        <input type="button" id="export_data" value="Export summary" rv-enabled="data_properties.num_lists" title="Export summary data shown in this box (JSON format)">
                         <input type="file" id="real_export_data" nwsaveas="data.json"> <!-- easy hack to style file select -->
-                        <input type="button" id="export_data_csv" value="Export CSV" rv-enabled="data_properties.num_lists">
+                        <input type="button" id="export_data_csv" value="Export data" rv-enabled="data_properties.num_lists" title="Export per-list metrics for further analysis (CSV format)">
                         <input type="file" id="real_export_data_csv" nwsaveas="data.csv"> <!-- easy hack to style file select -->
                     </th>   
                 </tr>
