--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="../js/controllers.js" defer></script>
 </head>
 <body>
-    <div id="about"> v 2.2.1 </div>
+    <div id="about"> v 2.3.0 </div>
     <div id="input_row">
         <input type="text" id="fluency_files" value="results_cleaned.csv">
 		<input type="hidden" id="fluency_dir" value="../uploads">
@@ -119,30 +119,32 @@
                 <tr>
                     <th>Data Properties</th>
                     <th>
-                        <input type="button" id="export_data" value="Export JSON" rv-enabled="data_properties.num_lists">
+                        <input type="button" id="export_data" value="Save Summary" rv-enabled="data_properties.num_lists" title="Export summary data shown in this box (JSON format)">
                         <input type="file" id="real_export_data" nwsaveas="data.json"> <!-- easy hack to style file select -->
-                        <input type="button" id="export_data_csv" value="Export CSV" rv-enabled="data_properties.num_lists">
+                        <input type="button" id="export_data_csv" value="Save Data" rv-enabled="data_properties.num_lists" title="Export per-list metrics for further analysis (CSV format)">
                         <input type="file" id="real_export_data_csv" nwsaveas="data.csv"> <!-- easy hack to style file select -->
                     </th>   
                 </tr>
                 <tr>
-                    <td>Number of lists</td>
-                    <td>{ data_properties.num_lists }</td>
+                    <td>Total number of spelling corrections</td>
+                    <td>{ data_properties.num_spell_corrections | trunc }
+                        <a rv-if="data_properties.num_spell_corrections" id="spellcorrect_list" href="#">(list)</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Avg number of lists</td>
+                    <td>{ data_properties.num_lists | trunc }</td>
                 </tr>
                 <tr>
                     <td>Avg number of items listed</td>
                     <td>{ data_properties.avg_items_listed | trunc }</td>
                 </tr>
                 <tr>
-                    <td>Avg number of unique items listed</td>
-                    <td>{ data_properties.avg_unique_items_listed | trunc }</td>
-                </tr>
-                <tr>
                     <td>Avg number of cluster switches</td>
                     <td>{ data_properties.avg_num_cluster_switches | trunc }</td>
                 </tr>
                 <tr>
-                    <td>Avg cluster length</td>
+                    <td>Avg cluster size</td>
                     <td>{ data_properties.avg_cluster_size | trunc }</td>
                 </tr>
                 <tr>
@@ -233,20 +235,20 @@
                 <tr>
                     <th>Network Properties</th>
                     <th>
-                        <input type="button" value="View" id="view_network" rv-enabled="network_properties.graph">
-                        <input type="button" id="export_network" value="Export JSON" rv-enabled="network_properties.graph">
-                        <input type="file" id="real_export_network" nwsaveas="network.json">
+                        <input type="button" value="View Network" id="view_network" rv-enabled="network_properties.graph">
+                        <input type="button" id="import_network" value="Load Network (JSON)">
+                        <input type="file" id="real_import_network">
                         <!-- easy hack to style file select -->
                     </th>
                 </tr>
                 <tr>
                     <th colspan="2">
-                        <input type="button" id="export_network_csv" value="Export CSV" rv-enabled="network_properties.graph">
+                        <input type="button" id="export_network_csv" value="Save Network (CSV)" rv-enabled="network_properties.graph">
                         <input type="file" id="real_export_network_csv" nwsaveas="network.csv">
-                        <input type="button" id="export_network_gml" value="Export GML" rv-enabled="network_properties.graph">
+                        <input type="button" id="export_network" value="Save Network (JSON)" rv-enabled="network_properties.graph">
+                        <input type="file" id="real_export_network" nwsaveas="network.json">                        
+                        <input type="button" id="export_network_gml" value="Save Network (GML)" rv-enabled="network_properties.graph">
                         <input type="file" id="real_export_network_gml" nwsaveas="network.gml">
-                        <input type="button" id="import_network" value="Import JSON">
-                        <input type="file" id="real_import_network">
                     </th>
                 </tr>
                 <tr>
@@ -273,6 +275,6 @@
         </div>
     </div>
     <div style="clear: both; font-weight: bold;">For Questions/comments/technical support please contact zemla@wisc.edu</div>
-    <span style="font-style: italic; font-size: 10pt;">Support for this research was provided by NIH R21AG0534676 and the Office of the VCGRE at UW-Madison with funding from the WARF.</span>
+    <span style="font-style: italic; font-size: 10pt;">Support for this software was provided by NLM T15LM007359, NIH R21AG0534676, and the Office of the VCGRE at UW-Madison with funding from the WARF.</span>
 </body>
 </html>
