--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="../js/controllers.js" defer></script>
 </head>
 <body>
-    <div id="about"> v 2.4.1 </div>
+    <div id="about"> v 2.4.2 </div>
     <div id="input_row">
         <input type="text" id="fluency_files" value="results_cleaned.csv">
 		<input type="hidden" id="fluency_dir" value="../uploads">
@@ -278,7 +278,7 @@
             </table>
         </div>
     </div>
-    <div style="clear: both; font-weight: bold;">For Questions/comments/technical support please contact zemla@wisc.edu</div>
+    <div style="clear: both; font-weight: bold;">For Questions/comments/technical support please contact jczemla@syr.edu</div>
     <span style="font-style: italic; font-size: 10pt;">Support for this software was provided by NLM T15LM007359, NIH R21AG0534676, and the Office of the VCGRE at UW-Madison with funding from the WARF.</span>
 </body>
 </html>
